Build every 2 hours

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@
 name: Deploy Jekyll site to Pages
 
 on:
+  # Run every 2 hours
+  schedule:
+    - cron: "0 */2 * * *"
+
   # Runs on pushes targeting the default branch
   push:
     branches: [$default-branch]
