--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@
 name: Deploy Jekyll site to Pages
 
 on:
-  # Run every 15 minutes
+  # Run every 2 hours
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "0 */2 * * *"
 
   # Runs on pushes targeting the main branch
   push:
@@ -23,6 +23,6 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build
-        uses: actions/jekyll-build-pages@v1
+        uses: actions/jekyll-build-pages@v3
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
